# zee

./: .gitignore  .hgignore  .prev-version  .x-update-copyright  AUTHORS  FAQ  HACKING  INSTALL  Makefile.am  NEWS  README  THANKS  bootstrap  bootstrap.conf  cfg.mk  configure.ac  mkrockspecs.lua  rockspecs.lua  zee-git-1.rockspec  zee-git-1.rockspec.in  zee.rockspec.in
bitlib/: Makefile.in  README  configure  lbitlib.c
build-aux/: .gitignore  Makefile.am  mkdotzee.lua  mkdotzile.lua  run-tests.lua  zee-help2man-wrapper  zile-help2man-wrapper
doc/: .gitignore  Makefile.am  man-extras
gl/top/: README-release.diff
m4/: .gitignore  gnulib-cache.m4
src/: .gitignore  Makefile.am  astr.lua  basic.lua  bind.lua  buffer.lua  clue.h  completion.lua  cua_bindings.lua  cut.lua  default-bindings.el  deletebuffer.lua  dotzile-extra.el  edit.lua  editfns.lua  emacs_bindings.lua  estr.lua  eval.lua  file.lua  funcs.c  funcs.lua  getkey.lua  help.c  help.lua  history.lua  keycode.lua  keys.c  killring.c  killring.lua  ldb-config.lua  ldb.lua  lib.lua  line.lua  lisp.lua  loadlua.lua.in  loadprog.lua.in  macro.lua  main.lua  marker.lua  minibuf.c  (+36 more)
src/lisp-tests/: cd.el  insert_file.el  interactive-quoted_insert.output
src/lisp-tests/zile-only/: kill_line.el  resume_search.el
tests/: .gitignore  Makefile.am  backward-char.el  backward-char.lua  backward-delete-char.lua  backward-kill-word.lua  backward-paragraph.lua  backward-sexp.lua  backward-word.el  backward-word.lua  beginning-of-buffer.lua  beginning-of-line.el  beginning-of-line.lua  capitalize-word.el  copy-region-as-kill.el  copy-region-as-kill.lua  copy-to-register.el  delete-blank-lines.el  delete-blank-lines.lua  delete-char.lua  delete-horizontal-space.el  delete-horizontal-space.lua  delete-region.lua  describe-bindings.lua  describe-function.el  describe-function.lua  describe-function.output  describe-key.lua  describe-thing_1.lua  describe-thing_2.lua  describe-variable.el  describe-variable.lua  describe_variable.output  downcase-region.el  downcase-word.el  edit-copy.lua  edit-cut.lua  edit-delete-horizontal-space.lua  edit-delete-next-character.lua  edit-delete-previous-character.lua  (+119 more)
tests/fixed-screen/: move-previous-page.lua
tests/interactive/: backward-delete-char.lua  backward-paragraph.lua  backward-sexp.lua  beginning-of-buffer.lua  beginning-of-line.lua  call-last-kbd-macro.lua  cd.lua  copy-region-as-kill.lua  delete-blank-lines.lua  delete-char.lua  delete-horizontal-space.lua  delete-region.lua  describe-bindings.lua  describe-function.lua  describe-key.lua  describe-thing_1.lua  describe-thing_2.lua  describe-variable.lua  edit-copy.lua  edit-cut.lua  edit-delete-horizontal-space.lua  edit-delete-next-character.lua  edit-delete-previous-character.lua  edit-delete-word-backward.lua  edit-delete-word.lua  edit-find-backward.lua  edit-find.lua  edit-goto-column.lua  edit-goto-line.lua  edit-indent.lua  edit-insert-newline-and-indent.lua  edit-insert-newline.lua  edit-insert-quoted.lua  edit-insert-tab.lua  edit-insert-tab.output  edit-kill-line.lua  edit-kill-selection.lua  edit-kill-word-backward.lua  edit-kill-word.lua  edit-paste.lua  (+74 more)
tests/regression/: 33910_execute-kbd-macro_with_edit-insert-quoted.lua  33910_execute-kbd-macro_with_quoted-insert.lua  34086_call-last-kbd-macro.lua  34087_undo_macro.lua  34193_interactive_insert.lua  35562_search-backward.lua  35567_minibuffer_ding_non_printable.lua  forward-char_at_end.el  forward-char_at_end.lua
tests/zee-only/: edit-undo.lua  edit-wrap-paragraph.lua  goal-column.lua  move-end-line.lua  move-previous-word.lua
tests/zee-only/fixed-screen/: move-next-page.lua  move-previous-page.lua
tests/zee-only/interactive/: call-last-kbd-macro.lua  edit-kill-word-backward.lua  edit-undo.lua  fill-paragraph_2.lua  goal-column.lua  keyboard-quit.lua  move-next-line.lua  move-previous-character.lua  move-previous-line.lua  negative_prefix-argument.lua  negative_prefix-argument.output
tests/zile-only/: backward-word.lua  edit-undo.lua  edit-wrap-paragraph.lua  end-of-line.lua  fill-paragraph.lua  fill-paragraph_2.lua  goal-column.lua  list-buffers.lua  move-end-line.lua  move-previous-word.lua  undo.lua
tests/zile-only/fixed-screen/: scroll-down.lua  scroll-up.lua
tests/zile-only/interactive/: backward-char.lua  backward-kill-word.lua  call-last-kbd-macro.lua  fill-paragraph_2.lua  goal-column.lua  keyboard-quit.lua  list-buffers.lua  move-previous-character.lua  move-previous-line.lua  negative_prefix-argument.lua  next-line.lua  previous-line.lua  undo.lua
zee/: .cvsignore  .gitignore  AUTHORS  INSTALL  Makefile.am  NEWS  README  THANKS  astr.lua  autogen.sh  bind.lua  buffer.lua  completion.lua  configure.ac  cua_bindings.lua  eval.lua  file.lua  help.lua  init.lua.in  keycode.lua  macro.lua  main.lua  minibuf.lua  search.lua  term.lua  term_curses.lua  undo.lua  variables.lua  zee.in  zee.lnk  zee.pkg  zile.pkg
zee/bitlib/: Makefile.am  Makefile.in  README  configure  configure.ac  lbitlib.c
zee/doc/: .cvsignore  BANNER.EPOC  FAQ  Makefile.am  TUTORIAL  config.h  dotzee.sample  lisp.txt  mkdoc.c  zee.1.in  zee.texi  zile.1.in  zlint
zee/src/: .cvsignore  Makefile.am  astr.c  astr.h  basic.c  bind.c  bind.lua  buffer.c  clue.h  command.c  completion.c  completion.lua  copyright.h  cua_bindings  display.c  editfns.c  emacs_bindings  eval.c  eval.h  extern.h  file.c  funcs.c  getopt.h  getopt_long_only.c  glue.c  help.c  history.c  history.lua  key_bindings.el  keys.c  keys.lua  killring.c  lib.lua  line.c  lisp.c  list.c  list.h  lists.c  lists.h  lua.c  (+63 more)
